为每个百度贴吧id加上个人主页跳转，一些小修正

--- a/android_tutorial.html
+++ b/android_tutorial.html
@@ -55,7 +55,7 @@
 	<div id="upper_box">
 		<h1>前言</h1>
 		<div class="content">
-			本教程由百度贴吧-销锋镝铸编写，第二节第三小节关于zipalign由百度贴吧-看丶小星星哎发现
+			本教程由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写，第二节第三小节关于zipalign由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9C%8B%E4%B8%B6%E5%B0%8F%E6%98%9F%E6%98%9F%E5%93%8E&ie=utf-8" target="_blank">看丶小星星哎</a>发现
 		</div>
 	</div>
 
