--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -55,7 +55,7 @@
 	<div id="upper_box">
 		<h1>前言</h1>
 		<div class="content">
-			内容详解原表大致框架及翻译由百度贴吧-大王派提供，游戏1.22.7及以后更新内容和其他更多解释说明由百度贴吧-销锋镝铸编写。<br />
+			内容详解原表大致框架及翻译由百度贴吧-大王派提供，游戏1.22.7及以后更新内容和其他更多解释说明由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写。<br />
 			目前本页内容对应游戏1.29。
 			<script>if(isMobile == true){document.write("<br />提示：手机端建议横屏查看");}</script>
 		</div>
