--- a/clothes_tutorial.html
+++ b/clothes_tutorial.html
@@ -42,7 +42,7 @@
 	<div id="upper_box">
 		<h1>前言</h1>
 		<div class="content">
-			本教程由百度贴吧-销锋镝铸编写<br />
+			本教程由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写<br />
 			建议先阅读<a href="xml_tutorial.html">XML基础知识</a>，再阅读此教程
 			<script>if(isMobile == true){document.write("<br />提示：手机端建议横屏查看");}</script>
 		</div>
@@ -57,7 +57,7 @@
 				例如第二行：
 			</div>
 			<div class="content">
-<pre class="language-markup"><code>&lt;ClothingData Index=&quot;1&quot; DisplayName=&quot;Old Shirt&quot; Slot=&quot;Torso&quot; ArmorProtection=&quot;0.2&quot; Sturdiness=&quot;10&quot; Insulation=&quot;2.0&quot; MovementSpeedFactor=&quot;1&quot; DensityModifier=&quot;0.0&quot; IsOuter=&quot;False&quot; CanByDyed=&quot;True&quot; Layer=&quot;1&quot; TextureName=&quot;Textures\Clothing\OldShirt&quot; ImpactSoundsFolder=&quot;&quot; Description=&quot;Old shirt you wore when being abandoned on this land. Can be dyed. No protection. Weak insulation.&quot; /&gt;</code></pre>
+<pre class="language-markup line-numbers" style="height:50px"><code>&lt;ClothingData Index=&quot;1&quot; DisplayName=&quot;Old Shirt&quot; Slot=&quot;Torso&quot; ArmorProtection=&quot;0.2&quot; Sturdiness=&quot;10&quot; Insulation=&quot;2.0&quot; MovementSpeedFactor=&quot;1&quot; DensityModifier=&quot;0.0&quot; IsOuter=&quot;False&quot; CanByDyed=&quot;True&quot; Layer=&quot;1&quot; TextureName=&quot;Textures\Clothing\OldShirt&quot; ImpactSoundsFolder=&quot;&quot; Description=&quot;Old shirt you wore when being abandoned on this land. Can be dyed. No protection. Weak insulation.&quot; /&gt;</code></pre>
 			</div>
 		</div>
 		
