--- a/crafting_recipes_tutorial.html
+++ b/crafting_recipes_tutorial.html
@@ -52,7 +52,7 @@
 	<div id="upper_box">
 		<h1>前言</h1>
 		<div class="content">
-			本教程由百度贴吧-销锋镝铸编写<br />
+			本教程由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写<br />
 			建议先阅读<a href="xml_tutorial.html">XML基础知识</a>，再阅读此教程
 		</div>
 	</div>
@@ -166,7 +166,7 @@
 					以下是由 百度贴吧-大王派 独创的大量合成表，有工具修复等方便生存模式的内容(从我的变态版4.0中提取的，默认产量已改为99)
 				</div>
 				<div class="content">
-<pre class="language-markup line-numbers" style="height:700px"><code>&lt;Recipe Result="OakWoodBlock" ResultCount="99" RequiredHeatLevel="0" a="planks" b="oakleaves" Description="SMT"&gt;
+<pre class="language-markup line-numbers" ><code>&lt;Recipe Result="OakWoodBlock" ResultCount="99" RequiredHeatLevel="0" a="planks" b="oakleaves" Description="SMT"&gt;
 "a a"
 " b"
 "a a"
@@ -298,7 +298,7 @@
 					以下是由 百度贴吧-清风明剑兮 制作的易风mod，用熊皮做货币，可以做各种交易
 				</div>
 				<div class="content">
-<pre class="language-markup line-numbers" style="height:700px"><code>&lt;Recipe Result="SpruceLeavesBlock" ResultCount="40" RequiredHeatLevel="0" a="leather" Description=""&gt;
+<pre class="language-markup line-numbers" ><code>&lt;Recipe Result="SpruceLeavesBlock" ResultCount="40" RequiredHeatLevel="0" a="leather" Description=""&gt;
 "a"
 &lt;/Recipe&gt;
 &lt;Recipe Result="BreadBlock" ResultCount="1" RequiredHeatLevel="0" a="leather" Description=""&gt;
