--- a/database_tutorial.html
+++ b/database_tutorial.html
@@ -59,7 +59,7 @@
 		<div class="content">
 			Database.xml可以说是几个重要纯粹游戏数据的文件中最为复杂的一个，主要是因为它包含数据多，层次多，使用了其他文件没有使用的一些东西。<br />
 			建议先阅读<a href="xml_tutorial.html">XML基础知识</a>，再阅读此教程<br />
-			本教程由-百度贴吧销锋镝铸编写
+			本教程由-百度贴吧<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写
 		</div>
 	</div>
 
@@ -187,11 +187,11 @@
 			<h1>附件</h1>
 			<div class="content">
 				<a href="http://pan.baidu.com/share/link?shareid=2218194687&uk=2788149454" target="_blank">中文版 1.25 database.xnb</a><br />
-				由百度贴吧-销锋镝铸翻译并提供
+				由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>翻译并提供
 			</div>
 			<div class="content">
 				<a href="http://pan.baidu.com/share/link?shareid=4293478391&uk=2788149454" target="_blank">简化版 1.27 database.xml</a><br />
-				由百度贴吧-销锋镝铸简化并提供（去除Guid，InheritanceParent，Type三种属性，方便查看）
+				由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>简化并提供（去除Guid，InheritanceParent，Type三种属性，方便查看）
 			</div>
 		</div>
 		<br />
