--- a/game_dll_tutorial.html
+++ b/game_dll_tutorial.html
@@ -41,7 +41,7 @@
 		<h1>前言</h1>
 		<div class="content">
 			<ul>
-				<li>此教程由百度贴吧-_0超新星0_ 编写</li>
+				<li>此教程由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=_0%E8%B6%85%E6%96%B0%E6%98%9F0_&ie=utf-8" target="_blank">_0超新星0_</a> 编写</li>
 				<li>在不同版本中Survivalcraft.dll的位置也不尽相同，甚至不一定存在，如果存在则可以打开安装包后用文件管理器的文件搜索功能快速地找到；如果不存在则可能是以其他的形式存在，因此修改方法也不一样，此教程仅以Survivalcraft.dll为例</li>
 				<li>注：此文件修改较难，需要有PC电脑端及较好的英语基础（有词典，万事通）（还有很好的耐心……）</li>
 			</ul>
