--- a/members.html
+++ b/members.html
@@ -59,35 +59,35 @@
 						<td>主要mod、材质作品及相关成就</td>
 					</tr>
 					<tr>
-						<td>销锋镝铸</td>
+						<td><a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a></td>
 						<td>组长<br />、委员</td>
 						<td>2013/7/10</td>
 						<td>活跃</td>
 						<td>变态版mod、地狱mod、变态版材质、SMT导航</td>
 					</tr>
 					<tr>
-						<td>_0超新星0_</td>
+						<td><a href="http://tieba.baidu.com/home/main/?un=_0%E8%B6%85%E6%96%B0%E6%98%9F0_&ie=utf-8" target="_blank">_0超新星0_</a></td>
 						<td width="50px">副组长<br />、委员</td>
 						<td>2014/1</td>
 						<td>活跃</td>
 						<td>更多合成公式mod、R3D-CRAFT材质，dll的研究，材质制作教程</td>
 					</tr>
 					<tr>
-						<td>512542248</td>
+						<td><a href="http://tieba.baidu.com/home/main/?un=512542248&ie=utf-8" target="_blank">512542248</a></td>
 						<td>委员</td>
 						<td>2013/7/10</td>
 						<td>退隐</td>
 						<td>早期mod研究，成立SMT</td>
 					</tr>
 					<tr>
-						<td style="word-break:break-all; word-wrap:break-all;">lzm956902416</td>
+						<td style="word-break:break-all; word-wrap:break-all;"><a href="http://tieba.baidu.com/home/main/?un=lzm956902416&ie=utf-8" target="_blank">lzm956902416</a></td>
 						<td>委员</td>
 						<td>2013</td>
 						<td>退隐</td>
 						<td>SMT导航</td>
 					</tr>
 					<tr>
-						<td>瞄准地雷</td>
+						<td><a href="http://tieba.baidu.com/home/main/?un=%E7%9E%84%E5%87%86%E5%9C%B0%E9%9B%B7&ie=utf-8" target="_blank">瞄准地雷</a></td>
 						<td>委员</td>
 						<td>2014/3/28</td>
 						<td>活跃</td>
@@ -136,7 +136,7 @@
 						<td>暂无</td>
 					</tr>
 					<tr>
-						<td>看丶小星星哎</td>
+						<td><a href="http://tieba.baidu.com/home/main/?un=%E7%9C%8B%E4%B8%B6%E5%B0%8F%E6%98%9F%E6%98%9F%E5%93%8E&ie=utf-8" target="_blank">看丶小星星哎</a></td>
 						<td>组员</td>
 						<td>2014/9/24</td>
 						<td>活跃</td>
