--- a/nav_update.html
+++ b/nav_update.html
@@ -69,9 +69,9 @@
 				<ol>
 					<li>网页体验优化，完美流畅</li>
 					<li>更新Blocksdata教程对应游戏1.29，修改了一些翻译和说明</li>
-					<li>资源下载整合增加安卓版pak处理器，感谢百度贴吧-瞄准地雷的开发和提供！还增加了apktool以及SCPacker的第二代——scpak</li>
+					<li>资源下载整合增加安卓版pak处理器，感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9E%84%E5%87%86%E5%9C%B0%E9%9B%B7&ie=utf-8" target="_blank">瞄准地雷</a>的开发和提供！还增加了apktool以及SCPacker的第二代——scpak</li>
 					<li>Content解析针对新出的安卓版pak处理器对第一节做了更新；更新、丰富、精简了第二节对一些文件的说明</li>
-					<li>Android基础教程第二节增加“关于zipalign”小节，由百度贴吧-看丶小星星哎 发现</li>
+					<li>Android基础教程第二节增加“关于zipalign”小节，由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9C%8B%E4%B8%B6%E5%B0%8F%E6%98%9F%E6%98%9F%E5%93%8E&ie=utf-8" target="_blank">看丶小星星哎</a> 发现</li>
 					<li>Database解析增加一个使白色加鞍马跑得更快的例子，将XML基础知识另立成篇</li>
 					<li>加入代码高亮，使示例代码看起来不再困难</li>
 				</ol>
