--- a/regex_tutorial.html
+++ b/regex_tutorial.html
@@ -43,7 +43,7 @@
 			<ul>
 				<li>正则表达式使用单个字符串来描述、匹配一系列符合某个句法规则的字符串。在很多文本编辑器里，正则表达式通常被用来检索、替换那些符合某个模式的文本。</li>
 				<li>在这里不要求各位完全掌握，只需要了解最基本的几个符号的用法达到加快批量修改速度的目的即可。</li>
-				<li>本教程由-百度贴吧销锋镝铸编写</li>
+				<li>本教程由-百度贴吧<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写</li>
 			</ul>
 		</div>
 	</div>
