--- a/resources.html
+++ b/resources.html
@@ -55,7 +55,7 @@
 	<div id="upper_box">
 		<h1>前言</h1>
 		<div class="content">
-			本相关资源下载整合由百度贴吧-销锋镝铸整理、推荐，部分资源不直接提供网盘下载原因是保证各位使用到最新版软件，部分资源使用方法请另看教程。<br />
+			本相关资源下载整合由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>整理、推荐，部分资源不直接提供网盘下载原因是保证各位使用到最新版软件，部分资源使用方法请另看教程。<br />
 			如果有更多，更好的相关资源，欢迎向编者我推荐！
 		</div>
 	</div>
@@ -142,7 +142,7 @@
 				<h2>6.解包打包工具</h2>
 				<div class="content">
 					<a name="a_lucky_patcher" href="http://pan.baidu.com/share/link?shareid=1066340296&uk=2788149454" target="_blank">pak处理器</a><br />
-					感谢百度贴吧-瞄准地雷的开发和提供！（暂不能处理Content.pak中的图片为png格式）<br />
+					感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9E%84%E5%87%86%E5%9C%B0%E9%9B%B7&ie=utf-8" target="_blank">瞄准地雷</a>的开发和提供！（暂不能处理Content.pak中的图片为png格式）<br />
 				</div>
 			</div>
 		</div>
@@ -299,11 +299,11 @@
 				<h2>9.解包打包工具</h2>
 				<div class="content">
 					<a href="http://pan.baidu.com/share/link?shareid=711454717&uk=2788149454">SCPacker</a><br />
-					感谢百度贴吧-电离的Tesla 的开发和提供！
+					感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 的开发和提供！
 				</div>
 				<div class="content">
 					<a href="http://pan.baidu.com/share/link?shareid=1759953273&uk=2788149454">scpak</a><br />
-					同样由百度贴吧-电离的Tesla 开发的工具，为SCPacker的第二代，可将Content/Fonts中的字库文件解开
+					同样由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 开发的工具，为SCPacker的第二代，可将Content/Fonts中的字库文件解开
 				</div>
 			</div>
 		</div>
@@ -319,7 +319,7 @@
 				</div>
 				<div class="content">
 					<a href="http://pan.baidu.com/share/link?shareid=4293478391&uk=2788149454" target="_blank">简化版 1.27 database.xml</a><br />
-					由百度贴吧-销锋镝铸简化并提供（去除Guid，InheritanceParent，Type三种参数，方便查看）
+					由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>简化并提供（去除Guid，InheritanceParent，Type三种参数，方便查看）
 				</div>
 		</div>
 		<br />
