--- a/xml_tutorial.html
+++ b/xml_tutorial.html
@@ -57,7 +57,7 @@
 			<ul>
 				<li>XML是可扩展标记语言文件的扩展名（后缀），是一种用于标记电子文件使其具有结构性的标记语言</li>
 				<li>在这里不要求各位完全掌握，只需要了解一些基础知识即可。</li>
-				<li>本教程由-百度贴吧销锋镝铸编写</li>
+				<li>本教程由-百度贴吧<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写</li>
 				<li>更多内容请访问<a href='http://runoob.com/xml/xml-tutorial.html' target='_blank'>http://runoob.com/xml/xml-tutorial.html</a></li>
 			</ul>
 		</div>
