--- a/content_folder_tutorial.html
+++ b/content_folder_tutorial.html
@@ -52,7 +52,7 @@
 		<h1>前言</h1>
 		<div class="content">
 			<ul>
-			<li>本教程由百度贴吧-销锋镝铸编写</li>
+			<li>本教程由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写</li>
 			<li>在Survivalcraft的安装包中，都存在一个Content.pak，其内包含有各种游戏数据和资源，在此我对该文件进行一个完整的解析</li>
 			<li>将该文件使用解包工具解包后，即可使用相对应的工具进行编辑</li>
 		</div>
