--- a/ios_tutorial.html
+++ b/ios_tutorial.html
@@ -54,7 +54,7 @@
 	<div id="upper_box">
 		<h1>前言</h1>
 		<div class="content">
-			本教程由百度贴吧-销锋镝铸编写
+			本教程由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写
 		</div>
 	</div>
 
