--- a/windows_tutorial.html
+++ b/windows_tutorial.html
@@ -53,7 +53,7 @@
 		<h1>前言</h1>
 		<div class="content">
 			Survivalcraft在1.27版本的更新中已支持Windows系统，但是是作为Mordern应用登录应用市场，所以至少要Windows 8才能运行（8.1、10也能）。同时因为Mordern应用不用打包安装后才能更新应用中的文件，以及目前Content.pak只有Windows版，所以在Windows系统上测试和使用mod是最方便的。<br />
-			本教程由百度贴吧-销锋镝铸编写
+			本教程由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写
 		</div>
 	</div>
 
