新增展开导航栏中当前章节子项的功能
导航栏中每一章节的children加入id “nav_children_序号”
nav加入自定义属性“data-open”（纯数字），规定该页应展开导航中的第几个章节
delayload.js新增展开导航项方法openNavItem(navItemId)

--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -41,7 +41,7 @@
 	</div>
 
 	<!--导航-->
-	<div id="nav" class="nav"></div>
+	<div id="nav" class="nav" data-open="3"></div>
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
