--- a/history.html
+++ b/history.html
@@ -46,7 +46,7 @@
 		<li class="parent"><span onclick="menuTo('cont_3')">2015年</span></li>
 	</div>
 	<!--导航-->
-	<div id="nav" class="nav"></div>
+	<div id="nav" class="nav" data-open="1"></div>
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
