--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
 
 	<!--导航-->
-	<div id="nav" class="nav"></div>
+	<div id="nav" class="nav" data-open="1"></div>
 	<div id="nav_overlay"></div>
 
 	<!--顶栏-->
