--- a/regex_tutorial.html
+++ b/regex_tutorial.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<!--导航-->
-	<div id="nav" class="nav"></div>
+	<div id="nav" class="nav" data-open="4"></div>
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
