--- a/android_tutorial.html
+++ b/android_tutorial.html
@@ -76,21 +76,21 @@
 				<div class="content">
 					打开apk编辑器，并找到Survivalcraft的<a href="resources.html">安装包</a>（后缀为apk）
 					<img class="saimg"
-					online="http://ww3.sinaimg.cn/large/005yyi5Jjw1emxze5tmb1j30ct0lcjsh.jpg"
-					offline="saimg/android_01.jpg" />
+					data-online="http://ww3.sinaimg.cn/large/005yyi5Jjw1emxze5tmb1j30ct0lcjsh.jpg"
+					data-offline="saimg/android_01.jpg" />
 				</div>
 				<div class="content">
 					单击安装包
 					<img class="saimg"
-					online="http://ww4.sinaimg.cn/large/005yyi5Jjw1emxze4twvvj30ct0lc3zk.jpg"
-					offline="saimg/android_02.jpg" />
+					data-online="http://ww4.sinaimg.cn/large/005yyi5Jjw1emxze4twvvj30ct0lc3zk.jpg"
+					data-offline="saimg/android_02.jpg" />
 				</div>
 				<div class="content">
 					打开assest文件夹，就可以看到Content.pak了，之前的Content解析已对它进行讲解，此不复述<br />
 					长按Content.pak，替换，选择已经修改好的Content.pak完成替换（apk编辑器将自动对安装包进行签名，无需再次签名）
 					<img class="saimg"
-					online="http://ww4.sinaimg.cn/large/0065QQIxgw1euricmsbb5j30dc0m8dge.jpg"
-					offline="saimg/android_03.png" />
+					data-online="http://ww4.sinaimg.cn/large/0065QQIxgw1euricmsbb5j30dc0m8dge.jpg"
+					data-offline="saimg/android_03.png" />
 				</div>
 				<div class="content">
 					卸载之前版本后安装已修改完成的安装包即可测试mod
@@ -102,32 +102,32 @@
 				<div class="content">
 					至少一边打开安装包所在目录
 					<img class="saimg"
-					online="http://ww2.sinaimg.cn/large/005yyi5Jjw1emxze0g6evj30ct0lcq4o.jpg"
-					offline="saimg/android_06.jpg" />
+					data-online="http://ww2.sinaimg.cn/large/005yyi5Jjw1emxze0g6evj30ct0lcq4o.jpg"
+					data-offline="saimg/android_06.jpg" />
 				</div>
 				<div class="content">
 					单击安装包，选择查看
 					<img class="saimg"
-					online="http://ww3.sinaimg.cn/large/005yyi5Jjw1emxzdz39vfj30ct0lcgn9.jpg"
-					offline="saimg/android_07.jpg" />
+					data-online="http://ww3.sinaimg.cn/large/005yyi5Jjw1emxzdz39vfj30ct0lcgn9.jpg"
+					data-offline="saimg/android_07.jpg" />
 				</div>
 				<div class="content">
 					打开assest文件夹，就可以看到Content.pak了，之前的Content解析已对它进行讲解，此不复述
 					<img class="saimg"
-					online="http://ww2.sinaimg.cn/large/0065QQIxgw1euricn9am6j30ce0kkt95.jpg"
-					offline="saimg/android_08.png" />
+					data-online="http://ww2.sinaimg.cn/large/0065QQIxgw1euricn9am6j30ce0kkt95.jpg"
+					data-offline="saimg/android_08.png" />
 				</div>
 				<div class="content">
 					在另外一边长按已修改好的Content.pak，点添加，确定
 					<img class="saimg"
-					online="http://ww4.sinaimg.cn/large/0065QQIxgw1euricnxvhjj30ce0kk0tj.jpg"
-					offline="saimg/android_10.png" />
+					data-online="http://ww4.sinaimg.cn/large/0065QQIxgw1euricnxvhjj30ce0kk0tj.jpg"
+					data-offline="saimg/android_10.png" />
 				</div>
 				<div class="content">
 					确定之后回到安装包所在目录，点击已完成修改的安装包，签名（不签名无法安装）
 					<img class="saimg"
-					online="http://ww3.sinaimg.cn/large/005yyi5Jjw1emxzdz39vfj30ct0lcgn9.jpg"
-					offline="saimg/android_07.jpg" />
+					data-online="http://ww3.sinaimg.cn/large/005yyi5Jjw1emxzdz39vfj30ct0lcgn9.jpg"
+					data-offline="saimg/android_07.jpg" />
 				</div>
 				<div class="content">
 					卸载之前版本后安装已签名的新安装包即可测试mod
@@ -142,8 +142,8 @@
 				<div class="content">
 					安装打开<a href="resources.html#cont_2">apktool 5.2</a>，点击安装包，点击zipalign优化，安装处理后的安装包
 					<img class="saimg"
-					online="http://ww2.sinaimg.cn/large/0065QQIxgw1f0b0n3lzkaj30cc0kk0to.jpg"
-					offline="saimg/android_11.png" />
+					data-online="http://ww2.sinaimg.cn/large/0065QQIxgw1f0b0n3lzkaj30cc0kk0to.jpg"
+					data-offline="saimg/android_11.png" />
 				</div>
 			</div>
 		</div>
@@ -159,14 +159,14 @@
 				<div class="content">
 					打开幸运破解器，点击左下角工具箱-Android核心破解
 					<img class="saimg"
-					online="http://ww3.sinaimg.cn/large/005yyi5Jjw1emxzdsh4qaj30ct0lcwgg.jpg"
-					offline="saimg/android_12.jpg" />
+					data-online="http://ww3.sinaimg.cn/large/005yyi5Jjw1emxzdsh4qaj30ct0lcwgg.jpg"
+					data-offline="saimg/android_12.jpg" />
 				</div>
 				<div class="content">
 					一次勾选一个点应用，前两次可能需要花费较长时间，请耐心等待。全部完成后可以无视签名直接安装软件
 					<img class="saimg"
-					online="http://ww3.sinaimg.cn/large/005yyi5Jjw1emxzdr00vbj30ct0lcac3.jpg"
-					offline="saimg/android_13.jpg" />
+					data-online="http://ww3.sinaimg.cn/large/005yyi5Jjw1emxzdr00vbj30ct0lcac3.jpg"
+					data-offline="saimg/android_13.jpg" />
 				</div>
 			</div>
 		</div>
