--- a/database_tutorial.html
+++ b/database_tutorial.html
@@ -71,12 +71,12 @@
 			<div class="content">
 				用专门的代码编辑器打开Database.xml，折叠所有层次后打开Database层次，可以看到整个文件由四个大层次组成
 				<img class="saimg"
-				online="http://ww4.sinaimg.cn/large/005yyi5Jjw1enewqnnj44j30sg0lc0u4.jpg"
-				offline="saimg/database_1.png" />
+				data-online="http://ww4.sinaimg.cn/large/005yyi5Jjw1enewqnnj44j30sg0lc0u4.jpg"
+				data-offline="saimg/database_1.png" />
 				1.DatabaseObjectTypes是层次说明，说明每一个层次可以有什么样的内容等等（详见<a href="#cont_appendix">中文版1.25 database.xnb</a>）
 				<img class="saimg"
-				online="http://ww4.sinaimg.cn/large/005yyi5Jjw1enewxizlzhj30sg0lcwuy.jpg"
-				offline="saimg/database_2.png" />
+				data-online="http://ww4.sinaimg.cn/large/005yyi5Jjw1enewxizlzhj30sg0lcwuy.jpg"
+				data-offline="saimg/database_2.png" />
 				2.Assemblies 一个文件说明～无需了解<br />
 				3.DatabaseObjects 各种数据存储的地方，以及描述（就是这个东西的说明书啦）<br />
 				4.GridViewPresets 不知道是什么东西～
@@ -88,16 +88,16 @@
 			<div class="content">
 				第三大层次中有实体和一些其他内容的数据和描述组成
 				<img class="saimg"
-				online="http://ww2.sinaimg.cn/large/005yyi5Jjw1enexgoiz2nj30sg0lc49r.jpg"
-				offline="saimg/database_3.png" />
+				data-online="http://ww2.sinaimg.cn/large/005yyi5Jjw1enexgoiz2nj30sg0lc49r.jpg"
+				data-offline="saimg/database_3.png" />
 				<div class="section">
 					<h2>Creatures文件夹</h2>
 					<div class="content">
 						包含大部分生物的大部分属性以及少量描述。<br />
 						这里有个生物继承导图，从此图可以很容易地看出各生物之间的继承关系。
 						<img class="saimg"
-						online="http://ww2.sinaimg.cn/large/0065QQIxgw1euriubgtvsj30wg1opk6b.jpg"
-						offline="saimg/database_4.png" />
+						data-online="http://ww2.sinaimg.cn/large/0065QQIxgw1euriubgtvsj30wg1opk6b.jpg"
+						data-offline="saimg/database_4.png" />
 						<center><div class="note">点击图片直接浏览原图，点击<a href="http://pan.baidu.com/share/link?shareid=68742967&uk=2788149454" target="_blank">此处</a>下载原图或xmind版</div></center>
 						修改生物数据一般照葫芦画瓢即可，各属性详细说明见各个文件夹中的描述，需要注意允许的数据类型（详见<a href="blocksdata_tutorial.html#cont_1">Blocksdata解析第一节</a>）<br />
 						给生物添加行为和数据或添加生物需要注意层次，不要把更高级的层次放到低级或同等级层次中了，否则一定报错。<br />
