--- a/ios_tutorial.html
+++ b/ios_tutorial.html
@@ -74,8 +74,8 @@
 				<div class="content">
 					免费获取游戏（有能力建议App Store购买）：在PP助手（其他第三方应用市场亦可）中下载并安装Survivalcraft（如图第一个）
 					<img class="saimg"
-					online="http://ww2.sinaimg.cn/large/005yyi5Jjw1emy58p1vr1j30lc0g0mzz.jpg"
-					offline="saimg/ios_01.jpg" />
+					data-online="http://ww2.sinaimg.cn/large/005yyi5Jjw1emy58p1vr1j30lc0g0mzz.jpg"
+					data-offline="saimg/ios_01.jpg" />
 				</div>
 			</div>
 			<div class="section" id="cont_2.2">
@@ -87,14 +87,14 @@
 				<div class="content">
 					打开如上路径后找到并打开Survivalcraft文件夹
 					<img class="saimg"
-					online="http://ww4.sinaimg.cn/large/0065QQIxgw1eurinpw6vwj30hs0qowi8.jpg"
-					offline="saimg/ios_02.png" />
+					data-online="http://ww4.sinaimg.cn/large/0065QQIxgw1eurinpw6vwj30hs0qowi8.jpg"
+					data-offline="saimg/ios_02.png" />
 				</div>
 				<div class="content">
 					再打开Survivalcraft.app文件夹，就可以看到Content.pak了，之前的<a href="content_folder_tutorial.html">Content解析</a>已对它进行讲解，此不复述，接下来把修改好的Content.pak复制粘贴到此，即可直接打开游戏对mod进行测试
 					<img class="saimg"
-					online="http://ww1.sinaimg.cn/large/0065QQIxgw1eurinqin2rj30hs0qo0wc.jpg"
-					offline="saimg/ios_03.png" />
+					data-online="http://ww1.sinaimg.cn/large/0065QQIxgw1eurinqin2rj30hs0qo0wc.jpg"
+					data-offline="saimg/ios_03.png" />
 				</div>
 			</div>
 		</div>
@@ -105,11 +105,11 @@
 			<div class="content">
 				打开pp助手，更多-系统管理（3.X版本PP助手则是管理-系统管理）-Survivalcraft-备份-不保存存档
 				<img class="saimg"
-				online="http://ww1.sinaimg.cn/large/005yyi5Jjw1emy58bwis6j30lc0g0wfq.jpg"
-				offline="saimg/ios_4.jpg" />
+				data-online="http://ww1.sinaimg.cn/large/005yyi5Jjw1emy58bwis6j30lc0g0wfq.jpg"
+				data-offline="saimg/ios_4.jpg" />
 				<img class="saimg"
-				online="http://ww1.sinaimg.cn/large/005yyi5Jjw1emy58b4mzgj30lc0g0wfx.jpg"
-				offline="saimg/ios_5.jpg" />
+				data-online="http://ww1.sinaimg.cn/large/005yyi5Jjw1emy58b4mzgj30lc0g0wfx.jpg"
+				data-offline="saimg/ios_5.jpg" />
 			</div>
 			<div class="content">
 				根据安装方式不同，可以在以下两个位置找到生成的安装包（如图，后缀为ipa）<br />
@@ -117,8 +117,8 @@
 				以上为PP助手2.X的路径，如果是3.X则把以上路径中的PPHelperNS改成PPHelperNS3或PPniubility即可<br />
 				其他方式安装：IOS 7.X及以下设备使用文件管理器打开此路径：/var/mobile/Applications；IOS 8.X及以上设备则使用Filza打开：/var/mobile/Containers/Bundle/Data，找到文件夹——PP助手，再依次打开Documents/Others即可找到生成的安装包<br />
 				<img class="saimg"
-				online="http://ww1.sinaimg.cn/large/005yyi5Jjw1emy583ufzaj30e80lcdhg.jpg"
-				offline="saimg/ios_6.jpg" />
+				data-online="http://ww1.sinaimg.cn/large/005yyi5Jjw1emy583ufzaj30e80lcdhg.jpg"
+				data-offline="saimg/ios_6.jpg" />
 		</div>
 		<br />
 	</div>
