上传图片 & 优化saimg显示 & 修复saimg不显示的问题

--- a/logo.html
+++ b/logo.html
@@ -64,24 +64,24 @@
 			<div class="content">
 				<div>
 					<img class="saimg" title="SMT logo 2014.9.10"
-					data-online="image/logo_1.png"
-					data-offline="image/logo_1.png" />
+					data-online="saimg/logo_1.png"
+					data-offline="saimg/logo_1.png" />
 					SMT logo 2014.9.10<br />
 				</div>
 			</div>
 			<div class="content">
 				<div>
 					<img class="saimg" title="CandyRufusGames logo"
-					data-online="image/logo_2.jpg"
-					data-offline="image/logo_2.jpg" />
+					data-online="saimg/logo_2.jpg"
+					data-offline="saimg/logo_2.jpg" />
 					CandyRufusGames logo<br />
 				</div>
 			</div>
 			<div class="content">
 				<div>
 					<img class="saimg" title="SMT&CRG logo 2014.9.10"
-					data-online="image/logo_3.png"
-					data-offline="image/logo_3.png" />
+					data-online="saimg/logo_3.png"
+					data-offline="saimg/logo_3.png" />
 					SMT&CRG logo 2014.9.10<br />
 				</div>
 			</div>
@@ -92,16 +92,16 @@
 			<div class="content">
 				<div>
 					<img class="saimg" title="SMT logo 2014.1.23"
-					data-online="image/logo_4.png"
-					data-offline="image/logo_4.png" />
+					data-online="saimg/logo_4.png"
+					data-offline="saimg/logo_4.png" />
 					SMT logo 2014.1.23<br />
 				</div>
 			</div>
 			<div class="content">
 				<div>
 					<img class="saimg" title="SMT经典logo 2013"
-					data-online="image/logo_5.jpg"
-					data-offline="image/logo_5.jpg" />
+					data-online="saimg/logo_5.jpg"
+					data-offline="saimg/logo_5.jpg" />
 					SMT经典logo 2013<br />
 				</div>
 			</div>
