在线图片改用github存储
感谢qnnnnez的好提议！
求不墙！

--- a/content_folder_tutorial.html
+++ b/content_folder_tutorial.html
@@ -80,7 +80,7 @@
 				<div class="content">
 					具体每个文件夹等下说，先说直接在该目录下的文件
 					<img class="saimg"
-					data-online="http://ww3.sinaimg.cn/large/0065QQIxgw1euricqdy4nj308u0cqmz3.jpg"
+					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/content_1.png"
 					data-offline="saimg/content_1.png" />
 				</div>
 				<div class="content">
@@ -136,11 +136,11 @@
 					<h3>Atlases</h3>
 					该文件夹内有一些主要的操作界面的贴图（后缀为png的图片），例如方向键和各种按钮，以及其对应的配置文件（后缀为txt的文本）
 					<img class="saimg"
-					data-online="http://ww2.sinaimg.cn/large/0065QQIxgw1euricqzx2sj30bb04jmy3.jpg"
+					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/content_2.png"
 					data-offline="saimg/content_2.png" />
 					配置文件打开如下
 					<img class="saimg"
-					data-online="http://ww1.sinaimg.cn/large/0065QQIxgw1euricrmj3sj308j07mdh5.jpg"
+					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/content_3.png"
 					data-offline="saimg/content_3.png" />
 					每一行第一个空格前的文字为被切割的部分的名称，接下来的数字分别是从左上角数起横向第几个像素点开始，竖向第几个像素点开始，横向第几个像素点结束，竖向第几个像素点结束，接下来作用有待研究
 				</div>
