--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 	<div id="content_box">
 		<div class="chapter">
 			<div class="content">
-				<img class="saimg" title="SMT logo 2014.9.10" style="width:300px; max-width:80%; border: none;""
-				data-online="saimg/logo_1.png"
+				<img class="saimg" title="SMT logo 2014.9.10" style="width:300px; max-width:80%; border: none; box-shadow:none; margin:0 auto;"
+				data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_1.png"
 				data-offline="saimg/logo_1.png"/>
 			</div>
 			<div class="content">
