--- a/logo.html
+++ b/logo.html
@@ -10,9 +10,10 @@
 	<script>document.write("<link id='css_main' href='css/main.css?" + ver + "' rel='stylesheet' type='text/css' />");</script>
 	<script>document.write("<link id='css_article' href='css/article.css?" + ver + "' rel='stylesheet' type='text/css' />")</script>
 	<style>
-		#content_box .saimg {
-			margin:0 auto;
-			border:none;
+		.saimg {
+			margin: 0 auto;
+			border: none;
+			box-shadow: none;
 		}
 		#content_box span {
 			display:block;
@@ -64,7 +65,7 @@
 			<div class="content">
 				<div>
 					<img class="saimg" title="SMT logo 2014.9.10"
-					data-online="saimg/logo_1.png"
+					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_1.png"
 					data-offline="saimg/logo_1.png" />
 					SMT logo 2014.9.10<br />
 				</div>
@@ -72,7 +73,7 @@
 			<div class="content">
 				<div>
 					<img class="saimg" title="CandyRufusGames logo"
-					data-online="saimg/logo_2.jpg"
+					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_2.jpg"
 					data-offline="saimg/logo_2.jpg" />
 					CandyRufusGames logo<br />
 				</div>
@@ -80,7 +81,7 @@
 			<div class="content">
 				<div>
 					<img class="saimg" title="SMT&CRG logo 2014.9.10"
-					data-online="saimg/logo_3.png"
+					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_3.png"
 					data-offline="saimg/logo_3.png" />
 					SMT&CRG logo 2014.9.10<br />
 				</div>
@@ -92,7 +93,7 @@
 			<div class="content">
 				<div>
 					<img class="saimg" title="SMT logo 2014.1.23"
-					data-online="saimg/logo_4.png"
+					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_4.png"
 					data-offline="saimg/logo_4.png" />
 					SMT logo 2014.1.23<br />
 				</div>
@@ -100,7 +101,7 @@
 			<div class="content">
 				<div>
 					<img class="saimg" title="SMT经典logo 2013"
-					data-online="saimg/logo_5.jpg"
+					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_5.jpg"
 					data-offline="saimg/logo_5.jpg" />
 					SMT经典logo 2013<br />
 				</div>
