添加放大图片功能
要放大的图片加上magnifiable class

--- a/database_tutorial.html
+++ b/database_tutorial.html
@@ -70,11 +70,11 @@
 			<h1>第一节 结构解析</h1>
 			<div class="content">
 				用专门的代码编辑器打开Database.xml，折叠所有层次后打开Database层次，可以看到整个文件由四个大层次组成
-				<img class="saimg"
+				<img class="saimg magnifiable"
 				data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/database_1.png"
 				data-offline="saimg/database_1.png" />
 				1.DatabaseObjectTypes是层次说明，说明每一个层次可以有什么样的内容等等（详见<a href="#cont_appendix">中文版1.25 database.xnb</a>）
-				<img class="saimg"
+				<img class="saimg magnifiable"
 				data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/database_2.png"
 				data-offline="saimg/database_2.png" />
 				2.Assemblies 一个文件说明～无需了解<br />
@@ -87,7 +87,7 @@
 			<h1>第二节 要点说明</h1>
 			<div class="content">
 				第三大层次中有实体和一些其他内容的数据和描述组成
-				<img class="saimg"
+				<img class="saimg magnifiable"
 				data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/database_3.png"
 				data-offline="saimg/database_3.png" />
 				<div class="section">
@@ -95,7 +95,7 @@
 					<div class="content">
 						包含大部分生物的大部分属性以及少量描述。<br />
 						这里有个生物继承导图，从此图可以很容易地看出各生物之间的继承关系。
-						<img class="saimg"
+						<img class="saimg magnifiable"
 						data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/database_4.png"
 						data-offline="saimg/database_4.png" />
 						<center><div class="note">点击图片直接浏览原图，点击<a href="http://pan.baidu.com/share/link?shareid=68742967&uk=2788149454" target="_blank">此处</a>下载原图或xmind版</div></center>
