--- a/ios_tutorial.html
+++ b/ios_tutorial.html
@@ -73,7 +73,7 @@
 				<h2>1.获取游戏</h2>
 				<div class="content">
 					免费获取游戏（有能力建议App Store购买）：在PP助手（其他第三方应用市场亦可）中下载并安装Survivalcraft（如图第一个）
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/ios_01.jpg"
 					data-offline="saimg/ios_01.jpg" />
 				</div>
@@ -86,13 +86,13 @@
 				</div>
 				<div class="content">
 					打开如上路径后找到并打开Survivalcraft文件夹
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/ios_02.png"
 					data-offline="saimg/ios_02.png" />
 				</div>
 				<div class="content">
 					再打开Survivalcraft.app文件夹，就可以看到Content.pak了，之前的<a href="content_folder_tutorial.html">Content解析</a>已对它进行讲解，此不复述，接下来把修改好的Content.pak复制粘贴到此，即可直接打开游戏对mod进行测试
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/ios_03.png"
 					data-offline="saimg/ios_03.png" />
 				</div>
@@ -104,10 +104,10 @@
 			<span style="font-size:10pt; display:block; font-weight:bold;">——注：按此步骤生成的安装包不保证能够在所有IOS设备上能够正常使用，建议越狱玩家按照第二节的第二步手动替换Content.pak</span>
 			<div class="content">
 				打开pp助手，更多-系统管理（3.X版本PP助手则是管理-系统管理）-Survivalcraft-备份-不保存存档
-				<img class="saimg"
+				<img class="saimg magnifiable"
 				data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/ios_04.jpg"
 				data-offline="saimg/ios_04.jpg" />
-				<img class="saimg"
+				<img class="saimg magnifiable"
 				data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/ios_05.jpg"
 				data-offline="saimg/ios_05.jpg" />
 			</div>
@@ -116,7 +116,7 @@
 				在Cydia中安装：/var/mobile/Library/PPHelperNS/Documents/Others<br />
 				以上为PP助手2.X的路径，如果是3.X则把以上路径中的PPHelperNS改成PPHelperNS3或PPniubility即可<br />
 				其他方式安装：IOS 7.X及以下设备使用文件管理器打开此路径：/var/mobile/Applications；IOS 8.X及以上设备则使用Filza打开：/var/mobile/Containers/Bundle/Data，找到文件夹——PP助手，再依次打开Documents/Others即可找到生成的安装包<br />
-				<img class="saimg"
+				<img class="saimg magnifiable"
 				data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/ios_06.jpg"
 				data-offline="saimg/ios_06.jpg" />
 		</div>
