--- a/logo.html
+++ b/logo.html
@@ -64,7 +64,7 @@
 			<h1>第一节 现用logo</h1>
 			<div class="content">
 				<div>
-					<img class="saimg" title="SMT logo 2014.9.10"
+					<img class="saimg magnifiable" title="SMT logo 2014.9.10"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_1.png"
 					data-offline="saimg/logo_1.png" />
 					SMT logo 2014.9.10<br />
@@ -72,7 +72,7 @@
 			</div>
 			<div class="content">
 				<div>
-					<img class="saimg" title="CandyRufusGames logo"
+					<img class="saimg magnifiable" title="CandyRufusGames logo"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_2.jpg"
 					data-offline="saimg/logo_2.jpg" />
 					CandyRufusGames logo<br />
@@ -80,7 +80,7 @@
 			</div>
 			<div class="content">
 				<div>
-					<img class="saimg" title="SMT&CRG logo 2014.9.10"
+					<img class="saimg magnifiable" title="SMT&CRG logo 2014.9.10"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_3.png"
 					data-offline="saimg/logo_3.png" />
 					SMT&CRG logo 2014.9.10<br />
@@ -92,7 +92,7 @@
 			<h1>第二节 曾用logo</h1>
 			<div class="content">
 				<div>
-					<img class="saimg" title="SMT logo 2014.1.23"
+					<img class="saimg magnifiable" title="SMT logo 2014.1.23"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_4.png"
 					data-offline="saimg/logo_4.png" />
 					SMT logo 2014.1.23<br />
@@ -100,7 +100,7 @@
 			</div>
 			<div class="content">
 				<div>
-					<img class="saimg" title="SMT经典logo 2013"
+					<img class="saimg magnifiable" title="SMT经典logo 2013"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/logo_5.jpg"
 					data-offline="saimg/logo_5.jpg" />
 					SMT经典logo 2013<br />
