--- a/android_tutorial.html
+++ b/android_tutorial.html
@@ -75,20 +75,20 @@
 				<h2>1.apk编辑器篇</h2>
 				<div class="content">
 					打开apk编辑器，并找到Survivalcraft的<a href="resources.html">安装包</a>（后缀为apk）
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_01.jpg"
 					data-offline="saimg/android_01.jpg" />
 				</div>
 				<div class="content">
 					单击安装包
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_02.jpg"
 					data-offline="saimg/android_02.jpg" />
 				</div>
 				<div class="content">
 					打开assest文件夹，就可以看到Content.pak了，之前的Content解析已对它进行讲解，此不复述<br />
 					长按Content.pak，替换，选择已经修改好的Content.pak完成替换（apk编辑器将自动对安装包进行签名，无需再次签名）
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_03.png"
 					data-offline="saimg/android_03.png" />
 				</div>
@@ -101,31 +101,31 @@
 				<h2>2.MT管理器篇</h2>
 				<div class="content">
 					至少一边打开安装包所在目录
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_04.jpg"
 					data-offline="saimg/android_04.jpg" />
 				</div>
 				<div class="content">
 					单击安装包，选择查看
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_05.jpg"
 					data-offline="saimg/android_05.jpg" />
 				</div>
 				<div class="content">
 					打开assest文件夹，就可以看到Content.pak了，之前的Content解析已对它进行讲解，此不复述
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_06.png"
 					data-offline="saimg/android_06.png" />
 				</div>
 				<div class="content">
 					在另外一边长按已修改好的Content.pak，点添加，确定
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_07.png"
 					data-offline="saimg/android_07.png" />
 				</div>
 				<div class="content">
 					确定之后回到安装包所在目录，点击已完成修改的安装包，签名（不签名无法安装）
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_05.jpg"
 					data-offline="saimg/android_05.jpg" />
 				</div>
@@ -141,7 +141,7 @@
 				</div>
 				<div class="content">
 					安装打开<a href="resources.html#cont_2">apktool 5.2</a>，点击安装包，点击zipalign优化，安装处理后的安装包
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_08.png"
 					data-offline="saimg/android_08.png" />
 				</div>
@@ -158,13 +158,13 @@
 				<h2>步骤</h2>
 				<div class="content">
 					打开幸运破解器，点击左下角工具箱-Android核心破解
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_09.jpg"
 					data-offline="saimg/android_09.jpg" />
 				</div>
 				<div class="content">
 					一次勾选一个点应用，前两次可能需要花费较长时间，请耐心等待。全部完成后可以无视签名直接安装软件
-					<img class="saimg"
+					<img class="saimg magnifiable"
 					data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/android_10.jpg"
 					data-offline="saimg/android_10.jpg" />
 				</div>
