--- a/database_tutorial.html
+++ b/database_tutorial.html
@@ -147,22 +147,22 @@
 	&lt;/MemberComponentTemplate&gt;
 	&lt;MemberComponentTemplate Name="Miner" Guid="047bf6eb-6d85-4b9f-9e37-5a97dc15d8fd" InheritanceParent="8acca888-ba39-464f-bcf5-6ae15e448c62"&gt;
 		&lt;Parameter Name="AttackPower" Guid="c0608320-e57c-56be-9ffd-351aa10a9683" Value="0" Type="System.Single" /&gt;
-	&lt;/MemberComponentTemplate&gt;<span style="float:right;" class="note">&lt;!--（有攻击力才能追击）--&gt;</span>
+	&lt;/MemberComponentTemplate&gt;&lt;!--有攻击力才能追击--&gt;
 	&lt;MemberComponentTemplate Name="Health" Guid="f8814ebd-7e1d-48b7-83ed-9d3fc75e4a1f"&gt;
 		&lt;Parameter Name="FireResilience" Guid="58baefde-47d9-42fb-879d-345169d3979a" Value="10" Type="System.Single" /&gt;
 		&lt;Parameter Name="AttackResilience" Guid="8b2fd0bc-fb0d-4905-b162-f5afdf5ac5b4" Value="2000" Type="System.Single" /&gt;
-	&lt;/MemberComponentTemplate&gt;<span style="float:right;" class="note">（只能被烧死而不能被打死）</span>
+	&lt;/MemberComponentTemplate&gt;&lt;!--只能被烧死而不能被打死--&gt;
 	&lt;MemberComponentTemplate Name="ChaseBehavior" Guid="d71acd48-f5d5-4bde-8baf-9a4a1db39841" InheritanceParent="31894441-d90a-4549-9264-db9dbe20e234"&gt;
-		&lt;Parameter Name="ChaseWhenAttackedProbability" Guid="60b1024a-acd0-4536-bba4-9a510286a396" Value="1" Type="System.Single" /&gt;<span style="float:right;" class="note">（遭到攻击100%还击，即成为宠物）</span>
+		&lt;Parameter Name="ChaseWhenAttackedProbability" Guid="60b1024a-acd0-4536-bba4-9a510286a396" Value="1" Type="System.Single" /&gt;&lt;!--遭到攻击100%还击，即成为宠物--&gt;
 		&lt;Parameter Name="NightChaseRange" Guid="42b0ca10-ed8b-4079-b513-966221ecb1ab" Value="999" Type="System.Single" /&gt;
 		&lt;Parameter Name="DayChaseTime" Guid="558111d8-eb1c-4e53-a94d-df49525121f6" Value="3600" Type="System.Single" /&gt;
 		&lt;Parameter Name="NightChaseTime" Guid="61771540-6229-4f79-b9fd-2a39b50cfd46" Value="3600" Type="System.Single" /&gt;
-		&lt;Parameter Name="DayChaseRange" Guid="f8c4f30d-c05e-d829-99dc-66cd028a59aa" Value="999" Type="System.Single" /&gt;<span style="float:right;" class="note">（为了长久且长距离地保持追击）</span>
-		&lt;Parameter Name="AutoChaseMask" Guid="0434faa5-d599-4ced-989f-7d4c08a2e34c" Value="0" Type="Game.CreatureCategory" /&gt;<span style="float:right;" class="note">（使其不会主动追击其他生物）</span>
+		&lt;Parameter Name="DayChaseRange" Guid="f8c4f30d-c05e-d829-99dc-66cd028a59aa" Value="999" Type="System.Single" /&gt;&lt;!--为了长久且长距离地保持追击--&gt;
+		&lt;Parameter Name="AutoChaseMask" Guid="0434faa5-d599-4ced-989f-7d4c08a2e34c" Value="0" Type="Game.CreatureCategory" /&gt;&lt;!--使其不会主动追击其他生物--&gt;
 	&lt;/MemberComponentTemplate&gt;
 	&lt;ParameterSet Name="CreatureEggData" Guid="09f2015a-163c-44bb-dc6f-c9d22027cddf"&gt;
 		&lt;Parameter Name="DisplayName" Guid="48c75384-3dcc-4a6b-b566-5a2e4cb21b17" Value="Seagull Pet Egg" Type="System.String" /&gt;
-		&lt;Parameter Name="NutritionalValue" Guid="61dd9c88-2de6-464e-9383-0d0c4a4d2c5d" Value="0" Type="System.Single" /&gt;<span style="float:right;" class="note">（设置动物蛋不可煮，免得多占用创造模式物品栏）</span>
+		&lt;Parameter Name="NutritionalValue" Guid="61dd9c88-2de6-464e-9383-0d0c4a4d2c5d" Value="0" Type="System.Single" /&gt;&lt;!--设置动物蛋不可煮，免得多占用创造模式物品栏--&gt;
 		&lt;Parameter Name="EggTypeIndex" Guid="cabca26b-f9cd-4908-8f8b-9e5dda5882d4" Value="38" Type="System.Int32" /&gt;
 	&lt;/ParameterSet&gt;
 &lt;/EntityTemplate&gt;</code></pre>
