“源代码”教程制作中，相关工具亦已上线
还修正了一些更新日期

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				本导航主要用于教授Survivalcraft Mod的制作方法，提供相关资源，以及介绍SMT组<br />
 			</div>
 			<div class="content">
-				网页主要开发者：百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=lzm956902416&ie=utf-8" target="_blank">lzm956902416</a>
+				网页开发者：百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=lzm956902416&ie=utf-8" target="_blank">lzm956902416</a>
 				<script>if(String(document.location.href).indexOf("survivalcraft.cn") >= 0)document.write("，同时也是本在线版服务器提供者")</script><br />
 			</div>
 		</div>
