--- a/nav_update.html
+++ b/nav_update.html
@@ -36,7 +36,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div" onclick="goTop()">导航版本更新&amp;离线</div>
-	<div id="last_update">——更新日期 2016年1月25日——</div>
+	<div id="last_update">——更新日期 2016年1月28日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -70,7 +70,7 @@
 					<li>网页体验全面优化，完美流畅</li>
 					<li>侧边栏进一步Material Design化，章节可展开缩起；点击图片可查看大图</li>
 					<li>首页增加网页开发者ID</li>
-					<li>资源下载整合增加安卓版pak处理器，感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9E%84%E5%87%86%E5%9C%B0%E9%9B%B7&ie=utf-8" target="_blank">瞄准地雷</a>的开发和提供！还增加了apktool以及SCPacker的第二代——scpak</li>
+					<li>资源下载整合增加安卓版pak处理器，感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9E%84%E5%87%86%E5%9C%B0%E9%9B%B7&ie=utf-8" target="_blank">瞄准地雷</a>的开发和提供！还增加了apktool以及SCPacker的第二代——scpak。源代码相关工具已正式上线</li>
 					<li>Content解析针对新出的安卓版pak处理器对第一节做了更新；更新、丰富、精简了第二节对一些文件的说明</li>
 					<li>Android基础教程第二节增加“关于zipalign”小节，由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9C%8B%E4%B8%B6%E5%B0%8F%E6%98%9F%E6%98%9F%E5%93%8E&ie=utf-8" target="_blank">看丶小星星哎</a> 发现</li>
 					<li>更新Blocksdata教程对应游戏1.29，修改了一些翻译和说明</li>
