--- a/resources.html
+++ b/resources.html
@@ -46,7 +46,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div" onclick="goTop()">资源下载整合</div>
-	<div id="last_update">——更新日期 2016年1月24日——</div>
+	<div id="last_update">——更新日期 2016年1月28日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -222,14 +222,20 @@
 			</div>
 
 			<div class="section" id="cont_4.5">
-				<h2>5.DLL相关</h2>
+				<h2>5.源代码相关</h2>
 				<div class="content">
-					<a name="w_ilspy" href="http://www.orsoon.com/plus/download.php?open=2&id=14703&uhash=f38555b6db96b634ee698814">ILSpy</a><br />
-					查看dll文件
+					<a name="w_ilspy" href="http://ilspy.net/">ILSpy</a><br />
+					以C#、VB、IL语言查看dll、exe可执行文件，简单好用
 				</div>
 				<div class="content">
-					<a name="w_vs" href="http://www.xiazaiba.com/html/4615.html" target="_blank">Visual Studio 2008</a>（含ilasm和ildasm）<br />
-					附<a href="http://zhu498833539.blog.163.com/blog/static/170712951201081163144448" target="_blank">VS2008破解方法</a>
+					<a href="http://pan.baidu.com/share/link?shareid=1721790542&uk=2788149454">NETFX Tools</a><br />
+					内有ildasm.exe，可反编译exe、ell文件为il，亦有和ILSpy相同的以不同语言查看的功能<br />
+					此处提供的版本提取自C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.6 Tools
+				</div>
+				<div class="content">
+					<a href="http://pan.baidu.com/share/link?shareid=1716294067&uk=2788149454">IL Assembler</a><br />
+					简称ilasm，可将IL语言编写的文件转换为exe、dll文件，使用控制台执行<br />
+					此处提供的版本提取自C:\Windows\Microsoft.NET\Framework64\v4.0.30319
 				</div>
 			</div>
 
