--- a/history.html
+++ b/history.html
@@ -44,6 +44,8 @@
 		<li class="parent"><span onclick="menuTo('cont_2')">2014年</span></li>
 		<div class="divide_line"></div>
 		<li class="parent"><span onclick="menuTo('cont_3')">2015年</span></li>
+		<div class="divide_line"></div>
+		<li><span onclick="reverseChapter()">倒序查看</span></li>
 	</div>
 	<!--导航-->
 	<div id="nav" class="nav" data-open="1"></div>
