优化关闭菜单功能 & 优化倒序功能
倒序允许传参：禁止/允许滚动到倒序前阅读位置、附加移动距离

--- a/history.html
+++ b/history.html
@@ -45,7 +45,7 @@
 		<div class="divide_line"></div>
 		<li class="parent"><span onclick="menuTo('cont_3')">2015年</span></li>
 		<div class="divide_line"></div>
-		<li><span onclick="reverseChapter()">倒序查看</span></li>
+		<li><span onclick="reverseChapter(true, 0)">倒序查看</span></li>
 	</div>
 	<!--导航-->
 	<div id="nav" class="nav" data-open="1"></div>
