修改首页对应游戏版本

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 				<script>if (ver == version) $("#current_version").html(version);</script>
 			</div>
 			<div class="content">
-			本版本更新日期 2015年9月18日<br />
-			本版本mod教程对应Survivalcraft 1.27
+			本版本更新日期 2016年？月？日<br />
+			本版本mod教程对应Survivalcraft 1.29
 			</div>
 		</div>
 
