排除错误语法

--- a/ios_tutorial.html
+++ b/ios_tutorial.html
@@ -119,6 +119,7 @@
 				<img class="saimg magnifiable"
 				data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/ios_06.jpg"
 				data-offline="saimg/ios_06.jpg" />
+			</div>
 		</div>
 		<br />
 	</div>
