--- a/xml_tutorial.html
+++ b/xml_tutorial.html
@@ -80,7 +80,7 @@
 					<h2>(2)&lt;xxx/&gt;</h2>
 					自闭合标签，以&lt;开始，以/&gt;结尾，xxx是内容，是最低的层级
 					<h2>元素的属性</h2>
-					&lt;abc def="ghi" /&gt;中，def="ghi"是abd元素的属性，其中def是属性名，ghi是属性值，属性值须加引号</br></br>
+					&lt;abc def="ghi" /&gt;中，def="ghi"是abd元素的属性，其中def是属性名，ghi是属性值，属性值须加引号
 				</div>
 			</div>
 		</div>
