解决移动端click 300ms延迟 & 性能优化
大部分onclick改用click()方法
页面滚动(jq animate)时，锁定chapFade(渐显/渐隐)方法

--- a/android_tutorial.html
+++ b/android_tutorial.html
@@ -28,16 +28,16 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span onclick="menuTo('cont_1')">一.所需工具</span></li>
+		<li class="parent"><span data-menuto="cont_1">一.所需工具</span></li>
 		<div class="divide_line"></div>
 
-		<li class="parent"><span onclick="menuTo('cont_2')">二.详细步骤</span></li>
-			<li class="child"><span onclick="menuTo('cont_2.1')">1.apk编辑器篇</span></li>
-			<li class="child"><span onclick="menuTo('cont_2.2')">2.mt管理器篇</span></li>
-			<li class="child"><span onclick="menuTo('cont_2.3')">3.注：关于zipalign</span></li>
+		<li class="parent"><span data-menuto="cont_2">二.详细步骤</span></li>
+			<li class="child"><span data-menuto="cont_2.1">1.apk编辑器篇</span></li>
+			<li class="child"><span data-menuto="cont_2.2">2.mt管理器篇</span></li>
+			<li class="child"><span data-menuto="cont_2.3">3.注：关于zipalign</span></li>
 		<div class="divide_line"></div>
 
-		<li class="parent"><span onclick="menuTo('cont_3')">三.关于安卓核心破解</span></li>
+		<li class="parent"><span data-menuto="cont_3">三.关于安卓核心破解</span></li>
 	</div>
 
 	<!--导航-->
@@ -45,7 +45,7 @@
 	<div id="nav_overlay"></div>
 
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">Android基础教程</div>
+	<div id="big_title_div">Android基础教程</div>
 	<div id="last_update">——更新日期 2015年8月3日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
