--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -28,16 +28,16 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span onclick="menuTo('cont_1')">一.数据类型</span></li>
+		<li class="parent"><span data-menuto="cont_1">一.数据类型</span></li>
 		<div class="divide_line"></div>
 
-		<li class="parent"><span onclick="menuTo('cont_2')">二.内容详解</span></li>
+		<li class="parent"><span data-menuto="cont_2">二.内容详解</span></li>
 		<div class="divide_line"></div>
 
-		<li class="parent"><span onclick="menuTo('cont_3')">三.启发例子</span></li>
+		<li class="parent"><span data-menuto="cont_3">三.启发例子</span></li>
 		<div class="divide_line"></div>
 
-		<li class="parent"><span onclick="menuTo('cont_appendix')">附录</span></li>
+		<li class="parent"><span data-menuto="cont_appendix">附录</span></li>
 	</div>
 
 	<!--导航-->
@@ -45,7 +45,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">Blocksdata教程</div>
+	<div id="big_title_div">Blocksdata教程</div>
 	<div id="last_update">——更新日期 2016年1月31日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
