--- a/database_tutorial.html
+++ b/database_tutorial.html
@@ -30,16 +30,16 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span onclick="menuTo('cont_2')">一.结构解析</span></li>
+		<li class="parent"><span data-menuto="cont_2">一.结构解析</span></li>
 		<div class="divide_line"></div>
 		
-		<li class="parent"><span onclick="menuTo('cont_3')">二.要点说明</span></li>
+		<li class="parent"><span data-menuto="cont_3">二.要点说明</span></li>
 		<div class="divide_line"></div>
 		
-		<li class="parent"><span onclick="menuTo('cont_4')">三.启发例子</span></li>
+		<li class="parent"><span data-menuto="cont_4">三.启发例子</span></li>
 		<div class="divide_line"></div>
 		
-		<li class="parent"><span onclick="menuTo('cont_appendix')">附件</span></li>
+		<li class="parent"><span data-menuto="cont_appendix">附件</span></li>
 	</div>
 
 	<!--导航-->
@@ -47,7 +47,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">Database解析</div>
+	<div id="big_title_div">Database解析</div>
 	<div id="last_update">——更新日期 2016年1月28日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
