--- a/logo.html
+++ b/logo.html
@@ -41,10 +41,10 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span onclick="menuTo('cont_1')">一.现用logo</span></li>
+		<li class="parent"><span data-menuto="cont_1">一.现用logo</span></li>
 		<div class="divide_line"></div>
 		
-		<li class="parent"><span onclick="menuTo('cont_2')">二.曾用logo</span></li>
+		<li class="parent"><span data-menuto="cont_2">二.曾用logo</span></li>
 	</div>
 
 	<!--导航-->
@@ -52,7 +52,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">SMT Logo</div>
+	<div id="big_title_div">SMT Logo</div>
 	<div id="last_update">——更新日期 2015年1月22日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
