--- a/regex_tutorial.html
+++ b/regex_tutorial.html
@@ -30,7 +30,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">正则表达式教程</div>
+	<div id="big_title_div">正则表达式教程</div>
 	<div id="last_update">——更新日期 2015年8月5日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
