--- a/rules.html
+++ b/rules.html
@@ -30,7 +30,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">SMT组规</div>
+	<div id="big_title_div">SMT组规</div>
 	<div id="last_update">——更新日期 2016年2月1日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
