--- a/xml_tutorial.html
+++ b/xml_tutorial.html
@@ -33,7 +33,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">XML基础知识</div>
+	<div id="big_title_div">XML基础知识</div>
 	<div id="last_update">——更新日期 2016年1月28日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
@@ -41,13 +41,13 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span onclick="menuTo('cont_1')">一.标签</span></li>
+		<li class="parent"><span data-menuto="cont_1">一.标签</span></li>
 		<div class="divide_line"></div>
 		
-		<li class="parent"><span onclick="menuTo('cont_2')">二.识别码和继承码</span></li>
+		<li class="parent"><span data-menuto="cont_2">二.识别码和继承码</span></li>
 		<div class="divide_line"></div>
 		
-		<li class="parent"><span onclick="menuTo('cont_3')">三.默认继承</span></li>
+		<li class="parent"><span data-menuto="cont_3">三.默认继承</span></li>
 	</div>
 	
 	<!--上栏-->
