--- a/clothes_tutorial.html
+++ b/clothes_tutorial.html
@@ -32,7 +32,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">Clothes解析</div>
+	<div id="big_title_div">Clothes解析</div>
 	<div id="last_update">——更新日期 2016年1月25日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
