--- a/content_folder_tutorial.html
+++ b/content_folder_tutorial.html
@@ -28,12 +28,12 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span onclick="menuTo('cont_1')">一.处理Content.pak</span></li>
+		<li class="parent"><span data-menuto="cont_1">一.处理Content.pak</span></li>
 		<div class="divide_line"></div>
 
-		<li class="parent"><span onclick="menuTo('cont_2')">二.具体解析</span></li>
-			<li class="child"><span onclick="menuTo('cont_2.1')">1.根目录</span></li>
-			<li class="child"><span onclick="menuTo('cont_2.2')">2.文件夹</span></li>
+		<li class="parent"><span data-menuto="cont_2">二.具体解析</span></li>
+			<li class="child"><span data-menuto="cont_2.1">1.根目录</span></li>
+			<li class="child"><span data-menuto="cont_2.2">2.文件夹</span></li>
 	</div>
 
 	<!--导航-->
@@ -41,7 +41,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">Content解析</div>
+	<div id="big_title_div">Content解析</div>
 	<div id="last_update">——更新日期 2016年1月31日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
