--- a/history.html
+++ b/history.html
@@ -39,11 +39,11 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span onclick="menuTo('cont_1')">2013年</span></li>
+		<li class="parent"><span data-menuto="cont_1">2013年</span></li>
 		<div class="divide_line"></div>
-		<li class="parent"><span onclick="menuTo('cont_2')">2014年</span></li>
+		<li class="parent"><span data-menuto="cont_2">2014年</span></li>
 		<div class="divide_line"></div>
-		<li class="parent"><span onclick="menuTo('cont_3')">2015年</span></li>
+		<li class="parent"><span data-menuto="cont_3">2015年</span></li>
 		<div class="divide_line"></div>
 		<li><span onclick="reverseChapter(true, 0)">倒序查看</span></li>
 	</div>
@@ -52,7 +52,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">SMT历史</div>
+	<div id="big_title_div">SMT历史</div>
 	<div id="last_update">——更新日期 2015年8月7日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
