--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div id="nav_overlay"></div>
 
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">SMT导航</div>
+	<div id="big_title_div">SMT导航</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
