--- a/resources.html
+++ b/resources.html
@@ -28,16 +28,16 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span onclick="menuTo('cont_1')">一.游戏下载</span></li>
+		<li class="parent"><span data-menuto="cont_1">一.游戏下载</span></li>
 		<div class="divide_line"></div>
 
-		<li class="parent"><span onclick="menuTo('cont_2')">二.安卓资源</span></li>
+		<li class="parent"><span data-menuto="cont_2">二.安卓资源</span></li>
 		<div class="divide_line"></div>
 
-		<li class="parent"><span onclick="menuTo('cont_3')">三.IOS资源</span></li>
+		<li class="parent"><span data-menuto="cont_3">三.IOS资源</span></li>
 		<div class="divide_line"></div>
 
-		<li class="parent"><span onclick="menuTo('cont_4')">四.Windows资源</span></li>
+		<li class="parent"><span data-menuto="cont_4">四.Windows资源</span></li>
 	</div>
 
 	<!--导航-->
@@ -45,7 +45,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">资源下载整合</div>
+	<div id="big_title_div">资源下载整合</div>
 	<div id="last_update">——更新日期 2016年1月31日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
