--- a/windows_tutorial.html
+++ b/windows_tutorial.html
@@ -28,13 +28,13 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span onclick="menuTo('cont_1')">一.所需工具</span></li>
+		<li class="parent"><span data-menuto="cont_1">一.所需工具</span></li>
 		<div class="divide_line"></div>
 		
-		<li class="parent"><span onclick="menuTo('cont_2')">二.详细步骤</span></li>
-			<li class="child"><span onclick="menuTo('cont_2.1')">1.获取游戏</span></li>
-			<li class="child"><span onclick="menuTo('cont_2.2')">2.安装游戏</span></li>
-			<li class="child"><span onclick="menuTo('cont_2.3')">3.替换Content</span></li>
+		<li class="parent"><span data-menuto="cont_2">二.详细步骤</span></li>
+			<li class="child"><span data-menuto="cont_2.1">1.获取游戏</span></li>
+			<li class="child"><span data-menuto="cont_2.2">2.安装游戏</span></li>
+			<li class="child"><span data-menuto="cont_2.3">3.替换Content</span></li>
 	</div>
 
 	<!--导航-->
@@ -42,7 +42,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div" onclick="goTop()">Windows基础教程</div>
+	<div id="big_title_div">Windows基础教程</div>
 	<div id="last_update">——更新日期 2016年1月31日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
