--- a/android_tutorial.html
+++ b/android_tutorial.html
@@ -22,8 +22,8 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<img id="menu_btn" src="image/menu_btn.png" />
-		<img id="nav_btn" src="image/nav_btn.png" />
+		<img id="menu_btn" src="image/menu_btn.svg" />
+		<img id="nav_btn" src="image/nav_btn.svg" />
 	</div>
 
 	<!--目录-->
