--- a/clothes_tutorial.html
+++ b/clothes_tutorial.html
@@ -24,7 +24,7 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<img id="nav_btn" src="image/nav_btn.png" />
+		<img id="nav_btn" src="image/nav_btn.svg" />
 	</div>
 
 	<!--导航-->
