更新导航更新内容

--- a/nav_update.html
+++ b/nav_update.html
@@ -36,7 +36,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div">导航版本更新&amp;离线</div>
-	<div id="last_update">——更新日期 2016年2月2日——</div>
+	<div id="last_update">——更新日期 2016年2月5日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -69,7 +69,7 @@
 				<ol>
 					<li>网页体验全面优化，完美流畅</li>
 					<li>侧边栏进一步Material Design化，章节可展开缩起</li>
-					<li>点击图片可直接在原页查看大图</li>
+					<li>pc版网页加入渐显、渐隐特效</li>
 					<li>加入代码高亮，使示例代码看起来不再困难</li>
 					<li>首页增加网页开发者ID</li>
 					<li>“源代码”教程正式上线</li>
