--- a/nav_update.html
+++ b/nav_update.html
@@ -65,11 +65,12 @@
 		<div class="chapter">
 			<h1>2.7.7.12</h1>
 			<div class="content">
-				更新日期：2016年2月6日<br />
+				更新日期：2016年2月7日<br />
 				<ol>
 					<li>网页体验全面优化，完美流畅</li>
 					<li>侧边栏进一步Material Design化，章节可展开收起</li>
 					<li>电脑端网页加入渐显、渐隐特效</li>
+					<li>新增错误页面</li>
 					<li>加入代码高亮，示例代码看起来不再困难</li>
 					<li>“源代码”教程正式上线</li>
 					<li>第四章增加发布范例</li>
